--- a/LunarMissionDesign/LaunchSimulatorUseCase2FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase2FullyDressed.tex
@@ -86,6 +86,9 @@ complete)\\\hline
 \end{tabular}\\\\
 \textbf{Alternative Flows:}
 \begin{itemize}
+\item[*]At anytime during the Scenario, the main Actors can choose to
+abort, the System will lauch the abort cycle, and alert all actors to
+the abort.
 \item[4a.,5a.]If the Engines do not ignite, then the System Alerts the
 Flight Controller of the issue, the Flight Controller aborts the
 laumch the System does not Transition to Ingnite Launch
