--- a/LunarMissionDesign/LaunchSimulatorUseCase1Scenario2FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase1Scenario2FullyDressed.tex
@@ -37,9 +37,9 @@ to Initiate Launch\\\\
 \end{tabular}\\\\
 \textbf{Alternative Flows:  }
 \begin{itemize}
-\item[1a.]If the System reports anomalies in rocket weight, then the System
-reports the Anomalies to the Flight Controller.  Flight Controller
-determines course of action.
+\item[1a.]If the System reports anomalies in rocket weight, then the
+System reports the Anomalies to the Flight Controller.  Flight
+Controller determines course of action.
 \item[2a.]If the System reports anomalies in the direction of the
 rocket forces (upward force when should be down, wrong directoin of the
 force), then the System reports the anomaly to the Flight Controller,
