--- a/LunarMissionDesign/LaunchSimulatorUseCase1Scenario4FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase1Scenario4FullyDressed.tex
@@ -61,5 +61,24 @@ Flight controller issues and Abort.
  beyond ``tollerance", then the System reports a Leak.  Flight
  controller issues and Abort.
 \end{itemize}
+\textbf{Special Requirements:  }
+\begin{itemize}
+\item The System returns Several different measurements for each
+Component.  All the appropriate data needs accessing.
+\end{itemize}
+\textbf{Technology \& Variations List:}
+\begin{itemize}
+\item ``Tollerance" for each Component may vary based on product, make
+and model
+\item What is considered ``tollerable" varies based on specification
+of component
+\end{itemize}
+\textbf{Frequency of Occurence:  }Almost Continuously--dependent upon
+System\\\\
+\textbf{Open Issues:}
+\begin{itemize}
+\item ``Tollerance" for all of the Components related to this Use Case
+need more attention and furthr investigation.
+\end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
