--- a/LunarMissionDesign/MonitorPrelaunchActivitiesUseCaseFullyDressed.tex
+++ b/LunarMissionDesign/MonitorPrelaunchActivitiesUseCaseFullyDressed.tex
@@ -9,7 +9,7 @@
 \textbf{Scope:  }Launch Simulator\\
 \textbf{Level:  }Flight Controller Goal\\
 \textbf{Primary Actor:  }Flight Controller\\
-\textbf{Secondary Actors:  }Astronaught, Engineer/Technician\\
+\textbf{Secondary Actors:  }Astronaut, Engineer/Technician\\
 \textbf{Related Use Cases:  }\textit{Use Case 2:  the Flight
 Controller Shall Monitor the Countdown}\\
 \textbf{Stakeholders \& Interrests:  }
@@ -24,7 +24,6 @@ Controller Shall Monitor the Countdown}
 \item Monitor the Fuel System for each Stage
 \item Monitor the Launching Mechanism
 \end{itemize}
-\item Flight Controller: wants to monitor the Pre-Launch Activities
 \item Engineer/Technician:  wants to monitor Pre-Launch Data
 \item Astronaut:  wants to monitor Pre-Launch Data
 \end{itemize}
@@ -45,13 +44,13 @@ Controller Shall Monitor the Countdown} & \\\hline
 Controller Shall Monitor the Countdown}\\\hline
 7. Initiate Launch Sequence & \\\hline
 & 8.  Transitions to Launch Initiation\\\hline
-& 9.  Iniiate Launch State\\\hline
+& 9.  Initiate Launch State\\\hline
 \end{tabular}\\\\
 \textbf{Alternative Flows:}
 \begin{itemize}
 \item[2a-5a.]If the System detects an anamoly in the Pre-Launch Data,
 then the System alerts the Flight Controller of the anomoly
-\item[2b-5b.]If there System alerts the Flight Controller of a Pre-
+\item[2b-5b.]If the System alerts the Flight Controller of a Pre-
 Launch anomaly \textit{(See Alternative Flow 2a.)}, then the Flight
 Controller can choose to hold the Countdown
 \item[2c-5c.]If there is a hold in the Countdown and the anomaly is
